--- a/packages/heroes-homm1-react/src/TownWindow/Treasury/Treasury.scss
+++ b/packages/heroes-homm1-react/src/TownWindow/Treasury/Treasury.scss
@@ -1,12 +1,19 @@
 .treasury {
-  background: url("/assets/ui/town-window/treasury-border.png");
+  background: url("./border.png");
   background-color: #000;
   display: inline-block;
   height: 204px;
-  padding: 5px;
+  padding: 6px 5px;
   width: 94px;
 
   &-resource {
+    display: inline-block;
+    width: 50%;
+    line-height: 0.8;
     text-align: center;
+
+    &:last-of-type {
+      width: 100%;
+    }
   }
 }
