--- a/packages/heroes-homm1-react/src/CombatLostWindow/CombatLostWindow.scss
+++ b/packages/heroes-homm1-react/src/CombatLostWindow/CombatLostWindow.scss
@@ -1,6 +1,6 @@
 .combat-lost-window {
   &-animation-background {
-    background: url('/assets/ui/combat-lost-window/animation-background.jpg');
+    background: url("/assets/ui/combat-lost-window/animation-background.jpg");
     display: inline-block;
     height: 125px;
     position: relative;
