move kingdom overview images into components

--- a/packages/heroes-homm1-react/src/KingdomOverviewWindow/HeroClassOverview/HeroClassOverview.scss
+++ b/packages/heroes-homm1-react/src/KingdomOverviewWindow/HeroClassOverview/HeroClassOverview.scss
@@ -6,21 +6,8 @@
     display: inline-block;
     height: 38px;
     margin-left: 10px;
-    position: relative;
     width: 33px;
-  }
-
-  &-count-image {
-    left: 0px;
-    position: absolute;
-    top: 0px;
-  }
-
-  &-count-value {
-    left: 0px;
-    position: absolute;
-    text-align: center;
-    top: 7px;
-    width: 100%;
+    background: url("./count-background.png");
+    padding-top: 7px;
   }
 }
