move assets for combat summary window, high scores window, structure icon

--- a/packages/heroes-homm1-react/src/HighScoresWindow/HighScoresWindow.scss
+++ b/packages/heroes-homm1-react/src/HighScoresWindow/HighScoresWindow.scss
@@ -1,5 +1,5 @@
 .high-scores-window {
-  background: url("/assets/ui/high-scores-window/background.jpg");
+  background: url("./background.jpg");
   height: 480px;
   position: relative;
   width: 640px;
