--- a/packages/heroes-homm1-react/src/StructureIcon/StructureIcon.scss
+++ b/packages/heroes-homm1-react/src/StructureIcon/StructureIcon.scss
@@ -2,7 +2,7 @@
   display: inline-block;
 
   &-name {
-    background: url("/assets/ui/structure-icon/name-background.jpg");
+    background: url("./name-background.jpg");
     height: 14px;
     line-height: 1;
     text-align: center;
