move combat lost window into assets folder

--- a/packages/heroes-homm1-react/src/CombatLostWindow/CombatLostWindow.scss
+++ b/packages/heroes-homm1-react/src/CombatLostWindow/CombatLostWindow.scss
@@ -1,6 +1,6 @@
 .combat-lost-window {
   &-animation-background {
-    background: url("./animation-background.jpg");
+    background: url("./assets/animation-background.jpg");
     display: inline-block;
     height: 125px;
     position: relative;
