move assets into assets folder

--- a/packages/heroes-homm1-react/src/HighScoresWindow/HighScoresWindow.scss
+++ b/packages/heroes-homm1-react/src/HighScoresWindow/HighScoresWindow.scss
@@ -1,5 +1,5 @@
 .high-scores-window {
-  background: url("./background.jpg");
+  background: url("./assets/background.jpg");
   height: 480px;
   position: relative;
   width: 640px;
