move assets into assets folder

--- a/packages/heroes-homm1-react/src/BigBar/BigBar.scss
+++ b/packages/heroes-homm1-react/src/BigBar/BigBar.scss
@@ -8,7 +8,7 @@
     position: absolute;
     width: 320px;
     height: 20px;
-    background: url("./background.jpg");
+    background: url("./assets/background.jpg");
   }
 
   &-left {
