--- a/packages/heroes-homm1-react/src/Frame/Frame.scss
+++ b/packages/heroes-homm1-react/src/Frame/Frame.scss
@@ -2,6 +2,6 @@
   display: inline-block;
   width: 111px;
   height: 105px;
-  background: url("./image.png");
+  background: url("./assets/image.png");
   padding: 6px 5px;
 }
