--- a/packages/heroes-homm1-react/src/TownWindow/TownWindow.scss
+++ b/packages/heroes-homm1-react/src/TownWindow/TownWindow.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: 212px;
     top: -8px;
-    background: url("./strip-background.png");
+    background: url("./assets/strip-background.png");
     margin-bottom: -8px;
   }
 
