--- a/packages/heroes-homm1-react/src/TownWindow/Treasury/Treasury.scss
+++ b/packages/heroes-homm1-react/src/TownWindow/Treasury/Treasury.scss
@@ -1,5 +1,5 @@
 .treasury {
-  background: url("./border.png");
+  background: url("./assets/border.png");
   background-color: #000;
   display: inline-block;
   height: 204px;
