--- a/packages/heroes-homm1-react/src/TroopWindow/TroopWindow.scss
+++ b/packages/heroes-homm1-react/src/TroopWindow/TroopWindow.scss
@@ -1,12 +1,12 @@
 .troop-window {
-  background: url("./background.png");
+  background: url("./assets/background.png");
   height: 229px;
   padding: 20px 35px;
   position: relative;
   width: 402px;
 
   &-count {
-    background: url("./count-background.jpg");
+    background: url("./assets/count-background.jpg");
     bottom: 17px;
     display: inline-block;
     height: 38px;
