--- a/packages/heroes-homm1-react/src/CampaignScenarioInfoWindow/CampaignScenarioInfoWindow.scss
+++ b/packages/heroes-homm1-react/src/CampaignScenarioInfoWindow/CampaignScenarioInfoWindow.scss
@@ -4,7 +4,7 @@
   padding-top: 43px;
   position: relative;
   width: 428px;
-  background: url("./background.jpg");
+  background: url("./assets/background.jpg");
 
   &-title {
     margin-bottom: 10px;
