--- a/packages/heroes-homm1-react/src/CombatSummaryWindow/CombatSummaryWindow.scss
+++ b/packages/heroes-homm1-react/src/CombatSummaryWindow/CombatSummaryWindow.scss
@@ -1,5 +1,5 @@
 .combat-summary-window {
-  background: url("./background.jpg");
+  background: url("./assets/background.jpg");
   height: 459px;
   padding: 38px 22px 20px 18px;
   position: relative;
