--- a/packages/heroes-homm1-react/src/HeroWindow/HeroWindow.scss
+++ b/packages/heroes-homm1-react/src/HeroWindow/HeroWindow.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 640px;
   height: 480px;
-  background: url("./background.jpg");
+  background: url("./assets/background.jpg");
 
   &-name {
     position: absolute;
