--- a/packages/heroes-homm1-react/src/KingdomOverviewWindow/KingdomOverviewWindow.scss
+++ b/packages/heroes-homm1-react/src/KingdomOverviewWindow/KingdomOverviewWindow.scss
@@ -1,5 +1,5 @@
 .kingdom-overview-window {
-  background-image: url("./background.jpg");
+  background: url("./assets/background.jpg");
   background-position-x: 96px;
   position: relative;
   width: 640px;
@@ -17,7 +17,7 @@
     position: relative;
     width: 201px;
     height: 46px;
-    background: url("./gold-per-day-background.jpg");
+    background: url("./assets/gold-per-day-background.jpg");
   }
 
   &-gold-per-day-text {
