--- a/packages/heroes-homm1-react/src/KingdomOverviewWindow/HeroClassOverview/HeroClassOverview.scss
+++ b/packages/heroes-homm1-react/src/KingdomOverviewWindow/HeroClassOverview/HeroClassOverview.scss
@@ -7,7 +7,7 @@
     height: 38px;
     margin-left: 10px;
     width: 33px;
-    background: url("./count-background.png");
+    background: url("./assets/count-background.png");
     padding-top: 7px;
   }
 }
