--- a/packages/heroes-homm1-react/src/RecruitTroopWindow/RecruitTroopWindow.scss
+++ b/packages/heroes-homm1-react/src/RecruitTroopWindow/RecruitTroopWindow.scss
@@ -1,5 +1,5 @@
 .recruit-troop-window {
-  background: url("./background.jpg");
+  background: url("./assets/background.jpg");
   height: 294px;
   padding: 20px;
   width: 320px;
