improve hero trading window layout

--- a/packages/heroes-homm1-react/src/HeroTradingWindow/HeroTradingWindow.scss
+++ b/packages/heroes-homm1-react/src/HeroTradingWindow/HeroTradingWindow.scss
@@ -1,9 +1,80 @@
 .hero-trading-window {
-  background: #000;
   position: relative;
-  text-align: center;
+  width: 448px;
+  height: 448px;
+  background: url("./assets/background.jpg");
+
+  &-title {
+    position: absolute;
+    width: 100%;
+    top: 9px;
+    text-align: center;
+  }
+
+  &-portrait {
+    position: absolute;
+    top: 44px;
+    left: 28px;
+  }
+
+  &-skills {
+    position: absolute;
+    width: 100%;
+    top: 44px;
+    text-align: center;
+
+    &-container {
+      display: inline-block;
+      width: 167px;
+    }
+  }
+
+  &-other-portrait {
+    position: absolute;
+    top: 44px;
+    left: 319px;
+  }
+
+  &-army {
+    position: absolute;
+    top: 147px;
+    left: 23px;
+  }
+
+  &-other-army {
+    position: absolute;
+    top: 147px;
+    left: 251px;
+  }
+
+  &-troop {
+    display: inline-block;
+    margin-right: 1px;
+  }
+
+  &-artifacts {
+    position: absolute;
+    width: 70px;
+    top: 193px;
+    left: 75px;
+  }
+
+  &-other-artifacts {
+    position: absolute;
+    width: 70px;
+    top: 193px;
+    left: 304px;
+  }
+
+  &-artifact {
+    display: inline-block;
+    margin-right: 1px;
+    margin-bottom: 1px;
+  }
 
   &-exit {
-    text-align: center;
+    position: absolute;
+    top: 412px;
+    left: 185px;
   }
 }
