fix actions position in game modal

--- a/packages/heroes-homm1-react/src/base/GameModal/GameModal.scss
+++ b/packages/heroes-homm1-react/src/base/GameModal/GameModal.scss
@@ -11,6 +11,14 @@
     text-align: center;
   }
 
+  &-actions {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    padding: 0 20px 20px 20px;
+    text-align: center;
+  }
+
   &-reverse {
     transform: scaleX(-1);
   }
