--- a/packages/heroes-homm1-react/src/SpellBookWindow/SpellBookWindow.scss
+++ b/packages/heroes-homm1-react/src/SpellBookWindow/SpellBookWindow.scss
@@ -1,26 +1,4 @@
-@mixin mirror-background() {
-  position: relative;
-  background-size: 0;
-
-  &::before, &::after {
-    position: absolute;
-    content: "";
-    width: 50%;
-    height: 100%;
-    background-image: inherit;
-    background-repeat: no-repeat;
-    z-index: -1;
-  }
-
-  &::before {
-    left: 0;
-    transform: scaleX(-1);
-  }
-
-  &::after {
-    right: 0;
-  }
-}
+@import "../style/mirror-background";
 
 .spell-book-window {
   position: relative;
