use mirror image in combat bar component and big bar component

--- a/packages/heroes-homm1-react/src/base/BigBar/BigBar.scss
+++ b/packages/heroes-homm1-react/src/base/BigBar/BigBar.scss
@@ -1,24 +1,13 @@
+@import "../../style/mirror-background";
+
 .big-bar {
   position: relative;
   width: 640px;
   height: 20px;
+  background: url("./assets/background.jpg");
   text-align: center;
 
-  &-left, &-right {
-    position: absolute;
-    width: 320px;
-    height: 20px;
-    background: url("./assets/background.jpg");
-  }
-
-  &-left {
-    left: 0px;
-    transform: scaleX(-1);
-  }
-
-  &-right {
-    right: 0px;
-  }
+  @include mirror-background();
 
   &-text {
     position: absolute;
