--- a/packages/heroes-homm1-react/src/base/GameModal/GameModal.scss
+++ b/packages/heroes-homm1-react/src/base/GameModal/GameModal.scss
@@ -19,6 +19,14 @@
     bottom: 0;
     padding: 0 20px 20px 20px;
     text-align: center;
+
+    &-confirm {
+      text-align: left;
+    }
+
+    &-cancel {
+      text-align: right;
+    }
   }
 
   &-header {
