implement artifact trading in hero trading window

--- a/packages/heroes-homm1-react/src/HeroTradingWindow/HeroTradingWindow.scss
+++ b/packages/heroes-homm1-react/src/HeroTradingWindow/HeroTradingWindow.scss
@@ -19,14 +19,10 @@
 
   &-skills {
     position: absolute;
-    width: 100%;
+    width: 40%;
     top: 44px;
+    left: 30%;
     text-align: center;
-
-    &-container {
-      display: inline-block;
-      width: 167px;
-    }
   }
 
   &-other-portrait {
