--- a/packages/heroes-homm1-react/src/HeroTradingWindow/Slot/Slot.module.scss
+++ b/packages/heroes-homm1-react/src/HeroTradingWindow/Slot/Slot.module.scss
@@ -1,12 +1,12 @@
-.slot {
+.root {
   display: inline-block;
   position: relative;
   width: 34px;
   height: 34px;
+}
 
-  &-selection {
-    left: 0px;
-    position: absolute;
-    top: 0px;
-  }
+.selection {
+  left: 0px;
+  position: absolute;
+  top: 0px;
 }
