inject all elements into adventure screen

--- a/packages/heroes-homm1-react/src/AdventureScreen/AdventureScreen.module.scss
+++ b/packages/heroes-homm1-react/src/AdventureScreen/AdventureScreen.module.scss
@@ -5,7 +5,7 @@
   background: url("./assets/background.jpg");
 }
 
-.adventure-map {
+.adventure-window {
   position: absolute;
   top: 16px;
   left: 16px;
