refactor hero window to render troop instead of army

--- a/packages/heroes-homm1-react/src/HeroWindow/HeroWindow.module.scss
+++ b/packages/heroes-homm1-react/src/HeroWindow/HeroWindow.module.scss
@@ -47,6 +47,11 @@
   left: 156px;
 }
 
+.troop {
+  display: inline-block;
+  margin-right: 6px;
+}
+
 .artifacts {
   position: absolute;
   top: 302px;
