extract crest and treasury rendering from town window

--- a/packages/heroes-homm1-react/src/TownWindow/TownWindow.module.scss
+++ b/packages/heroes-homm1-react/src/TownWindow/TownWindow.module.scss
@@ -24,6 +24,7 @@
   position: absolute;
   top: 14px;
   left: 5px;
+  width: 101px;
 }
 
 .garrison-army {
@@ -48,4 +49,5 @@
   position: absolute;
   top: 8px;
   right: 0px;
+  width: 94px;
 }
