--- a/packages/heroes-homm1-react/src/HeroWindow/HeroWindow.module.scss
+++ b/packages/heroes-homm1-react/src/HeroWindow/HeroWindow.module.scss
@@ -17,6 +17,7 @@
   top: 101px;
   left: 49px;
   width: 101px;
+  height: 93px;
 }
 
 .skills {
@@ -28,6 +29,7 @@
 .skill {
   display: inline-block;
   width: 82px;
+  height: 93px;
   margin-right: 6px;
 }
 
@@ -36,6 +38,7 @@
   top: 101px;
   left: 508px;
   width: 82px;
+  height: 93px;
 }
 
 .crest {
@@ -43,6 +46,7 @@
   top: 200px;
   left: 49px;
   width: 101px;
+  height: 93px;
 }
 
 .army {
@@ -54,6 +58,7 @@
 .troop {
   display: inline-block;
   width: 82px;
+  height: 93px;
   margin-right: 6px;
 }
 
