improve placeholder components look & feel

--- a/packages/heroes-homm1-react/src/TownWindow/TownWindow.module.scss
+++ b/packages/heroes-homm1-react/src/TownWindow/TownWindow.module.scss
@@ -29,11 +29,13 @@
   top: 14px;
   left: 5px;
   width: 101px;
+  height: 93px;
 }
 
 .troop {
   display: inline-block;
   width: 82px;
+  height: 93px;
   margin-right: 6px;
 }
 
@@ -48,6 +50,7 @@
   top: 113px;
   left: 5px;
   width: 101px;
+  height: 93px;
 }
 
 .hero-army {
@@ -61,4 +64,5 @@
   top: 8px;
   right: 0px;
   width: 94px;
+  height: 204px;
 }
