--- a/packages/heroes-homm1-react/src/AdventureScreen/AdventureScreen.module.scss
+++ b/packages/heroes-homm1-react/src/AdventureScreen/AdventureScreen.module.scss
@@ -9,15 +9,20 @@
   position: absolute;
   top: 16px;
   left: 16px;
+  width: 448px;
+  height: 448px;
 }
 
 .world-map {
   position: absolute;
   top: 16px;
   left: 480px;
+  width: 144px;
+  height: 144px;
 }
 
 %locators {
+  width: 71px;
   height: 128px;
   overflow: hidden;
 }
@@ -33,17 +38,21 @@
   @extend %locators;
   position: absolute;
   top: 176px;
-  left: 552px;
+  left: 553px;
 }
 
 .adventure-buttons {
   position: absolute;
   top: 320px;
   left: 480px;
+  width: 144px;
+  height: 72px;
 }
 
 .status-window {
   position: absolute;
   top: 393px;
-  left: 481px;
+  left: 480px;
+  width: 144px;
+  height: 71px;
 }
