--- a/packages/heroes-homm1-react/src/Locator/Locator.module.scss
+++ b/packages/heroes-homm1-react/src/Locator/Locator.module.scss
@@ -1,17 +1,17 @@
 .root {
-  height: 32px;
   position: relative;
   width: 56px;
+  height: 32px;
 }
 
 .background {
-  left: 1px;
   position: absolute;
   top: 1px;
+  left: 1px;
 }
 
 .selection {
-  left: 0px;
   position: absolute;
-  top: 0px;
+  top: 0;
+  left: 0;
 }
