--- a/packages/heroes-homm1-react/src/Placeholder/Placeholder.module.scss
+++ b/packages/heroes-homm1-react/src/Placeholder/Placeholder.module.scss
@@ -1,15 +1,15 @@
 .root {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: 10px;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   color: #757575;
-  background-color: #cccccc;
+  font-size: 10px;
   text-align: center;
-  opacity: .75;
+  background-color: #ccc;
+  opacity: 0.75;
 }
 
 .name {
