--- a/packages/heroes-homm1-react/src/style/_mirror-background.scss
+++ b/packages/heroes-homm1-react/src/style/_mirror-background.scss
@@ -2,14 +2,15 @@
   position: relative;
   background-size: 0;
 
-  &::before, &::after {
+  &::before,
+  &::after {
     position: absolute;
+    z-index: -1;
     content: "";
     width: 50%;
     height: 100%;
     background-image: inherit;
     background-repeat: no-repeat;
-    z-index: -1;
   }
 
   &::before {
