--- a/packages/heroes-homm1-react/src/HeroLocator/HeroLocator.module.scss
+++ b/packages/heroes-homm1-react/src/HeroLocator/HeroLocator.module.scss
@@ -1,23 +1,23 @@
 .root {
-  height: 22px;
-  left: 5px;
   position: relative;
   top: 5px;
+  left: 5px;
   width: 46px;
+  height: 22px;
 }
 
 .background {
   position: absolute;
-  top: 0px;
+  top: 0;
 }
 
 .mobility {
   position: absolute;
-  top: 0px;
+  top: 0;
 }
 
 .portrait {
-  left: 8px;
   position: absolute;
   top: -1px;
+  left: 8px;
 }
