--- a/packages/heroes-homm1-react/src/HeroWindow/HeroWindow.module.scss
+++ b/packages/heroes-homm1-react/src/HeroWindow/HeroWindow.module.scss
@@ -7,8 +7,8 @@
 
 .title {
   position: absolute;
-  width: 100%;
   top: 68px;
+  width: 100%;
   text-align: center;
 }
 
@@ -50,7 +50,7 @@
 }
 
 .army {
-  position:absolute;
+  position: absolute;
   top: 200px;
   left: 156px;
 }
@@ -90,7 +90,7 @@
 
 .status-text {
   position: absolute;
+  bottom: 0;
   width: 100%;
-  bottom: 0px;
   text-align: center;
 }
