--- a/packages/heroes-homm1-react/src/KingdomOverviewWindow/KingdomOverviewWindow.module.scss
+++ b/packages/heroes-homm1-react/src/KingdomOverviewWindow/KingdomOverviewWindow.module.scss
@@ -1,17 +1,16 @@
 .root {
   position: relative;
-  background: url("./assets/background.jpg");
-  background-position-x: 96px;
-  position: relative;
   width: 640px;
   height: 480px;
   text-align: center;
+  background: url("./assets/background.jpg");
+  background-position-x: 96px;
 }
 
 .banner {
-  left: 0px;
   position: absolute;
-  top: 0px;
+  top: 0;
+  left: 0;
 }
 
 .title-container {
@@ -33,9 +32,9 @@
 }
 
 .summary-title {
+  float: left;
   width: 96px;
   height: 100%;
-  float: left;
 }
 
 .summary-content {
@@ -124,12 +123,12 @@
 }
 
 .gold-per-day-text {
-  bottom: 2px;
-  left: 0px;
-  padding-left: 20px;
   position: absolute;
-  text-align: center;
+  bottom: 2px;
+  left: 0;
   width: 100%;
+  padding-left: 20px;
+  text-align: center;
 }
 
 .exit {
