--- a/packages/heroes-homm1-react/src/NewGameWindow/GameDifficultyBox/GameDifficultyBox.module.scss
+++ b/packages/heroes-homm1-react/src/NewGameWindow/GameDifficultyBox/GameDifficultyBox.module.scss
@@ -3,19 +3,19 @@
 }
 
 .image {
-  height: 71px;
   position: relative;
   width: 71px;
+  height: 71px;
 }
 
 .icon {
-  left: 3px;
   position: absolute;
   top: 3px;
+  left: 3px;
 }
 
 .selection {
-  left: 0px;
   position: absolute;
-  top: 0px;
+  top: 0;
+  left: 0;
 }
