--- a/packages/heroes-homm1-react/src/PuzzleWindow/PuzzleWindow.module.scss
+++ b/packages/heroes-homm1-react/src/PuzzleWindow/PuzzleWindow.module.scss
@@ -1,11 +1,11 @@
 .puzzle {
-  height: 448px;
   position: relative;
   width: 448px;
+  height: 448px;
 }
 
 .puzzle-piece {
-  left: 0px;
   position: absolute;
-  top: 0px;
+  top: 0;
+  left: 0;
 }
