--- a/packages/heroes-homm1-react/src/TownWindow/TownWindow.module.scss
+++ b/packages/heroes-homm1-react/src/TownWindow/TownWindow.module.scss
@@ -10,17 +10,17 @@
 
 .strip {
   position: relative;
+  top: -8px;
   width: 100%;
   height: 212px;
-  top: -8px;
-  background: url("./assets/strip-background.png");
   margin-bottom: -8px;
+  background: url("./assets/strip-background.png");
 }
 
 .town-name {
   position: absolute;
-  width: 100%;
   top: -6px;
+  width: 100%;
   text-align: center;
 }
 
@@ -62,7 +62,7 @@
 .treasury {
   position: absolute;
   top: 8px;
-  right: 0px;
+  right: 0;
   width: 94px;
   height: 204px;
 }
