--- a/packages/heroes-homm1-react/src/ViewWindow/ViewWindow.module.scss
+++ b/packages/heroes-homm1-react/src/ViewWindow/ViewWindow.module.scss
@@ -1,19 +1,19 @@
 .legend {
-  height: 144px;
   position: relative;
   width: 144px;
+  height: 144px;
 }
 
 .legend-background {
-  left: 0px;
   position: absolute;
-  top: 0px;
+  top: 0;
+  left: 0;
 }
 
 .exit {
-  bottom: 6px;
-  left: 0px;
   position: absolute;
-  text-align: center;
+  bottom: 6px;
+  left: 0;
   width: 100%;
+  text-align: center;
 }
