--- a/packages/heroes-homm1-react/src/base/AdditionalStatsInfo/AdditionalStatsInfo.module.scss
+++ b/packages/heroes-homm1-react/src/base/AdditionalStatsInfo/AdditionalStatsInfo.module.scss
@@ -1,19 +1,19 @@
 .root {
-  display: inline-block;
-  height: 93px;
   position: relative;
+  display: inline-block;
   width: 82px;
+  height: 93px;
 }
 
 .background {
   position: absolute;
-  top: 0px;
+  top: 0;
 }
 
 .morale {
-  left: 3px;
   position: absolute;
   top: 5px;
+  left: 3px;
 }
 
 .luck {
@@ -22,14 +22,14 @@
 }
 
 .experience {
-  height: 32px;
   position: absolute;
   top: 55px;
   width: 100%;
+  height: 32px;
 }
 
 .experience-value {
   float: right;
-  line-height: 32px;
   padding-right: 5px;
+  line-height: 32px;
 }
