--- a/packages/heroes-homm1-react/src/base/TownOverview/TownOverview.module.scss
+++ b/packages/heroes-homm1-react/src/base/TownOverview/TownOverview.module.scss
@@ -1,13 +1,13 @@
 .root {
-  height: 80px;
   position: relative;
   width: 132px;
+  height: 80px;
 }
 
 .count {
-  bottom: 0px;
-  left: 0px;
   position: absolute;
-  text-align: center;
+  bottom: 0;
+  left: 0;
   width: 100%;
+  text-align: center;
 }
