--- a/packages/heroes-homm1-react/src/base/TroopSlot/TroopSlot.module.scss
+++ b/packages/heroes-homm1-react/src/base/TroopSlot/TroopSlot.module.scss
@@ -1,25 +1,25 @@
 .root {
-  display: inline-block;
-  height: 93px;
   position: relative;
+  display: inline-block;
   width: 82px;
+  height: 93px;
 }
 
 .creature {
-  bottom: 5px;
   position: absolute;
-  text-align: center;
+  bottom: 5px;
   width: 100%;
+  text-align: center;
 }
 
 .count {
-  bottom: 2px;
   position: absolute;
   right: 7px;
+  bottom: 2px;
 }
 
 .selection {
-  left: 0px;
   position: absolute;
-  top: 0px;
+  top: 0;
+  left: 0;
 }
