--- a/packages/heroes-homm1-react/src/TownWindow/TownWindow.module.scss
+++ b/packages/heroes-homm1-react/src/TownWindow/TownWindow.module.scss
@@ -1,3 +1,5 @@
+@import "../style/index";
+
 .root {
   position: relative;
   width: 640px;
@@ -28,8 +30,8 @@
   position: absolute;
   top: 14px;
   left: 5px;
-  width: 101px;
-  height: 93px;
+
+  @include crest();
 }
 
 .troop {
@@ -49,8 +51,8 @@
   position: absolute;
   top: 113px;
   left: 5px;
-  width: 101px;
-  height: 93px;
+
+  @include hero-portrait();
 }
 
 .hero-army {
