--- a/packages/heroes-homm1-react/src/map/MapTile/MapTile.module.scss
+++ b/packages/heroes-homm1-react/src/map/MapTile/MapTile.module.scss
@@ -1,10 +1,18 @@
 @import "../../style/index";
 
 .root {
+  position: relative;
   width: $MAP_TILE_SIZE;
   height: $MAP_TILE_SIZE;
   // FIXME: render terrain
   background: green;
   border: solid grey;
   border-width: 0 1px 1px 0;
+}
+
+.content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
 }
